# AI-Agent_Builder

./: CONTRIBUTING.md  DEPLOYMENT_V2.md  README.md  docker-compose.yml
AI-Agent_Builder-main/: .mailmap  Makefile  pyproject.toml  requirements.txt  technical_report.md
AI-Agent_Builder-main/backend/: .env.example  config.py  requirements.txt
AI-Agent_Builder-main/backend/agents/: __init__.py  crew_orchestrator.py  voice_agent.py
AI-Agent_Builder-main/backend/api/routes/: chat.py
AI-Agent_Builder-main/backend/ocr/: ocr_engine.py
AI-Agent_Builder-main/backend/rag/: rag_pipeline.py
AI-Agent_Builder-main/benchmarks/: README.md
AI-Agent_Builder-main/benchmarks/sample_dataset/: ground_truth.json
AI-Agent_Builder-main/docker/: Dockerfile.backend
AI-Agent_Builder-main/frontend/src/: index.css
AI-Agent_Builder-main/frontend/src/components/: DocumentViewer.jsx
AI-Agent_Builder-main/tests/: test_integration_e2e.py
ai_agent_builder-main/backend/: config.py
ai_agent_builder-main/backend/agents/: fusion_agent.py  ocr_agent.py  vision_agent.py
ai_agent_builder-main/backend/cv/: detector.py
ai_agent_builder-main/frontend/src/: App.jsx
backend/: __init__.py
backend/agents/: state.py  text_reasoning_agent.py  workflow.py
backend/api/: main.py
backend/api/routes/: crew_analysis.py  documents.py
backend/cv/: detector.py  preprocessor.py
backend/rag/: embeddings.py  vector_store.py
benchmarks/: evaluate_pipeline.py
docs/adr/: 001-use-langgraph.md
frontend/src/components/: Header.jsx
